--- a/src/app/dashboard/dashboard/brand/brand.component.html
+++ b/src/app/dashboard/dashboard/brand/brand.component.html
@@ -18,9 +18,35 @@
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <div class="form-group">
+              <label class="col-sm-2 control-label">省市区</label>
+              <div class="col-sm-3">
+                <select name="province" class="form-control m-b" [(ngModel)]="brand.province" (change)="provinceListener()">
+                <option></option>
+                <option *ngFor="let pro of provinces">{{pro}}</option>
+                </select>
+              </div>
+              <div class="col-sm-3">
+                <select name="city" class="form-control m-b" [(ngModel)]="brand.city" (change)="cityListener()">
+                <option></option>
+                <option *ngFor="let cityName of citys">{{cityName}}</option>
+                </select>
+              </div>
+              <div class="col-sm-3">
+                <select name="district" class="form-control m-b" [(ngModel)]="brand.district" >
+                <option></option>
+                <option *ngFor="let district of districts">{{district}}</option>
+                </select>
+              </div>
+            </div>
+            <div class="line line-dashed b-b line-lg pull-in"></div>
+            <div class="form-group">
               <label class="col-sm-2 control-label">公司地址</label>
-              <div class="col-sm-10">
+              <div class="col-sm-4">
                 <input type="text" name="address" [(ngModel)]="brand.address" id="brandAddress" class="form-control rounded">
+              </div>
+              <label class="col-sm-2 control-label">拼音首字母</label>
+              <div class="col-sm-4">
+                <input type="text" name="char" [(ngModel)]="brand.char" id="brandchar" class="form-control rounded">
               </div>
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
@@ -57,7 +83,17 @@
                 <input type="text" name="email" [(ngModel)]="brand.email" id="brandemail" class="form-control rounded">
               </div>
             </div>
-
+            <div class="line line-dashed b-b line-lg pull-in"></div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">公司传真</label>
+              <div class="col-sm-4">
+                <input type="text" name="fax" [(ngModel)]="brand.fax" id="brandfax" class="form-control rounded">
+              </div>
+              <label class="col-sm-2 control-label">公司网址</label>
+              <div class="col-sm-4">
+                <input type="text" name="url" [(ngModel)]="brand.url" id="brandurl" class="form-control rounded">
+              </div>
+            </div>
 
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <div class="form-group">
@@ -72,7 +108,7 @@
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <label class="col-sm-2 control-label">请输入论坛信息</label>
             <div class="col-sm-10">
-              <div ui-jq="froalaEditor" [froalaEditor] name="brandContent" id="brandContent" [(ngModel)]="brand.content"></div>
+              <div ui-jq="froalaEditor" name="brandContent" id="brandContent" [(ngModel)]="brand.content" ngDefaultControl></div>
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
 
