--- a/src/app/dashboard/dashboard/product/product.component.html
+++ b/src/app/dashboard/dashboard/product/product.component.html
@@ -104,9 +104,8 @@
 
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">产品图片</label>
+              <label class="col-sm-2 control-label">产品外观图片</label>
               <div class="col-sm-10">
-
                 <form id="uploadForm" enctype="multipart/form-data" action="/api/web/file" method="post">
                   <input ui-jq="filestyle" accept="image/*" [(ngModel)]="uploadFileName" name="userPhoto" type="file" data-icon="false" (change)="changeListener($event)"
                     data-classButton="btn btn-default" data-classInput="form-control inline v-middle input-s">
@@ -118,19 +117,45 @@
               <table id="productImagesListTable" ui-jq="dataTable" class="table table-striped b-t b-b">
                 <thead>
                   <tr>
-                    <th style="width:80%">图片地址</th>
+                    <th style="width:80%">外观图片地址</th>
                     <th style="width:20%">删除</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let ima of product.images">
+                  <tr *ngFor="let ima of product.appearimages">
                     <td>{{ima}}</td>
                     <td><button class="delete" (click)="deleteImage(ima);">x</button></td>
                   </tr>
                 </tbody>
               </table>
             </div>
-
+            <div class="line line-dashed b-b line-lg pull-in"></div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">产品细节图片</label>
+              <div class="col-sm-10">
+                <form id="uploadForm2" enctype="multipart/form-data" action="/api/web/file" method="post">
+                  <input ui-jq="filestyle" accept="image/*" [(ngModel)]="uploadFileName2" name="userPhoto" type="file" data-icon="false" (change)="changeListener2($event)"
+                    data-classButton="btn btn-default" data-classInput="form-control inline v-middle input-s">
+                </form>
+              </div>
+            </div>
+            <!--图片信息-->
+            <div class="col-sm-10 col-sm-offset-2 table-responsive">
+              <table id="productImagesListTable2" ui-jq="dataTable" class="table table-striped b-t b-b">
+                <thead>
+                  <tr>
+                    <th style="width:80%">外观图片地址</th>
+                    <th style="width:20%">删除</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let ima of product.detailimages">
+                    <td>{{ima}}</td>
+                    <td><button class="delete" (click)="deleteImage(ima);">x</button></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <label class="col-sm-2 control-label">产品简介</label>
             <div class="col-sm-10">
