--- a/src/app/home/home/issue/issue.component.html
+++ b/src/app/home/home/issue/issue.component.html
@@ -1,42 +1,54 @@
 <div id="content" class="app-content" role="main">
   <ol class="breadcrumb">
-      <li><a routerLink="/home">首页</a></li>
-      <li><a routerLink="/home/home/formu">论坛</a></li>
-      <li class="active">发布帖子</li>
-    </ol>
+    <li><a routerLink="/home">首页</a></li>
+    <li><a (click)="goBack()">论坛</a></li>
+    <li class="active">发布帖子</li>
+  </ol>
   <div class="app-content-body ">
-    <div class="wrapper-md" >
+    <div class="wrapper-md">
       <div class="panel panel-default">
         <div class="panel-body">
-          <form class="form-horizontal" method="get" #f="ngForm" (ngSubmit)="submit()">
-            <div class="form-group">
+          <form class="form-horizontal" method="Post" #f="ngForm" (ngSubmit)="submit()">
+            <div class="form-group " [ngClass]="{'has-error': titleErr}" >
               <label class="col-sm-2 control-label">论坛标题</label>
               <div class="col-sm-10">
-                <input type="text" id="forumTitle" name="forumTitle" [(ngModel)]="forum.title" class="form-control rounded">
+                <input type="text" id="forumTitle" name="forumTitle" [(ngModel)]="forum.title" (change)="checkTitle()" class="form-control rounded">
               </div>
+
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
-            <div class="form-group" >
-              <label class="col-sm-2 control-label" >产品分类</label>
-              <div class="col-sm-4" >
+            <div class="form-group">
+              <label class="col-sm-2 control-label">产品分类</label>
+              <div class="col-sm-4">
                 <select name="type" class="form-control m-b" [(ngModel)]="forum.type" (change)="typeListener()">
                 <option></option>
                 <option *ngFor="let t of types" value="{{t}}">{{t}}</option>
                 </select>
               </div>
               <label class="col-sm-2 control-label">产品子类</label>
-              <div class="col-sm-4" >
-                <select name="subtype" class="form-control m-b" [(ngModel)]="forum.subType" >
+              <div class="col-sm-4">
+                <select name="subtype" class="form-control m-b" [(ngModel)]="forum.subType">
                 <option></option>
                 <option *ngFor="let sub of subTypes" value="{{sub}}">{{sub}}</option>
                 </select>
               </div>
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
-            <label class="col-sm-2 control-label">请输入论坛信息</label>
-              <div class="col-sm-10">
-                <div ui-jq="froalaEditor" [froalaEditor] name="forumContent" id="forumContent" [(ngModel)]="forum.content"></div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">标签</label>
+              <div class="col-sm-8">
+                <input ui-jq="tagsinput" name="tags" [(ngModel)]="forum.tags" ui-options="" class="form-control w-md" />
+                <span class="help-block m-b-none">输入后回车，可输入多项</span>
               </div>
+            </div>
+            <div class="line line-dashed b-b line-lg pull-in"></div>
+            <label class="col-sm-2 control-label">请输入论坛信息</label>
+            <div class="col-sm-10">
+              <!-- [froalaEditor]  -->
+              <!-- [(ngModel)]="forum.content" -->
+              <!-- ui-jq="froalaEditor" -->
+              <div  name="forumContent" id="forumContent"  ngDefaultControl ></div>
+            </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <div class="form-group">
               <div class="col-sm-2 col-sm-offset-10">
