--- a/src/app/home/home/news/news.component.html
+++ b/src/app/home/home/news/news.component.html
@@ -10,7 +10,7 @@
       <div class="row">
         <!--广告位信息  -->
         <div class="col-lg-12">
-          <div class="panel panel-info">
+          <div class="panel ">
             <div class="panel-body">col-lg-12</div>
           </div>
         </div>
