--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -5221,7 +5221,6 @@ a.text-#000000:hover {
 
 .figure .figcaption
 {
-  width: 90%;
 	font-size:25px;
 	font-weight:400;
 	max-height:3em;
@@ -5239,6 +5238,8 @@ a.text-#000000:hover {
 
 .subtitle
 {
+  padding-top: 10px;
+  margin-top: 10px;
 	color:#b1b1b1;
   font-size:14px;
   position:absolute;
