--- a/src/app/dashboard/basic-city/basic-city.component.html
+++ b/src/app/dashboard/basic-city/basic-city.component.html
@@ -29,6 +29,9 @@
               <div class="col-sm-4 col-sm-offset-2">
                 <button type="submit" class="btn btn-primary">保存</button>
               </div>
+              <div class="col-sm-4 col-sm-offset-2">
+                <button type="button" (click)="setRegion()" class="btn btn-primary">获取</button>
+              </div>
             </div>
           </form>
         </div>
