--- a/src/app/home/home/brand/brand.component.html
+++ b/src/app/home/home/brand/brand.component.html
@@ -18,7 +18,7 @@
             <p><a href="{{brand.url}}" target="_blank">{{brand.url}}</a></p>
             <p>{{brand.province}},{{brand.city}}, {{brand.district}},{{brand.address}}</p>
             <p>
-              电话: {{brand.tel}}<br> 传真: {{brand.fax}}
+              电话: {{brand.tel}}<br> 传真: {{brand.fax}}<br> 邮箱: {{brand.email}}
             </p>
           </div>
 
@@ -28,7 +28,6 @@
             <div [innerHTML]="brand.content"></div>
           </div>
         </div>
-        
       </div>
     </div>
   </div>
