--- a/src/app/home/home/product/product.component.html
+++ b/src/app/home/home/product/product.component.html
@@ -1,11 +1,11 @@
 <!-- content -->
 <div id="content" class="app-content" role="main">
-  <div class="app-content-body ">
     <ol class="breadcrumb">
       <li><a href="/home">首页</a></li>
       <li><a href="/home/home/find">发现</a></li>
       <li class="active">产品</li>
     </ol>
+  <div class="app-content-body ">
     <div class="bg-light lter b-b wrapper-md hidden-print">
       <!-- <a href class="btn btn-sm btn-info pull-right" onClick="window.print();">Print</a> -->
       <h1 class="m-n font-thin h3">{{productInfo["name"]}}</h1>
@@ -98,7 +98,7 @@
           <div class="modal fade" id="imagegallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button" class="close"  data-dismiss="modal"><i class="icon-close" style="font-size:40px"></i></button>
                 <h4 class="modal-title">{{modalTitle}}</h4>
               </div>
               <div class="modal-content">
