--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
       <a href="#/" class="navbar-brand text-lt">
           <i class="fa fa-btc"></i>
           <img src="./public/img/logo.png" alt="." class="hide">
-          <span class="hidden-folded m-l-xs">Angulr</span>
+          <span class="hidden-folded m-l-xs">乐器有家</span>
         </a>
       <!-- / brand -->
     </div>
@@ -33,233 +33,6 @@
       </div>
       <!-- / buttons -->
 
-      <!-- link and dropdown -->
-      <ul class="nav navbar-nav hidden-sm">
-        <li class="dropdown pos-stc">
-          <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-              <span>Mega</span> 
-              <span class="caret"></span>
-            </a>
-          <div class="dropdown-menu wrapper w-full bg-white">
-            <div class="row">
-              <div class="col-sm-4">
-                <div class="m-l-xs m-t-xs m-b-xs font-bold">Pages <span class="badge badge-sm bg-success">10</span></div>
-                <div class="row">
-                  <div class="col-xs-6">
-                    <ul class="list-unstyled l-h-2x">
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Profile</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Post</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Search</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Invoice</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-xs-6">
-                    <ul class="list-unstyled l-h-2x">
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Price</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Lock screen</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Sign in</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Sign up</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 b-l b-light">
-                <div class="m-l-xs m-t-xs m-b-xs font-bold">UI Kits <span class="label label-sm bg-primary">12</span></div>
-                <div class="row">
-                  <div class="col-xs-6">
-                    <ul class="list-unstyled l-h-2x">
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Buttons</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Icons <span class="badge badge-sm bg-warning">1000+</span></a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Grid</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Widgets</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-xs-6">
-                    <ul class="list-unstyled l-h-2x">
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Bootstap</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Sortable</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Portlet</a>
-                      </li>
-                      <li>
-                        <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Timeline</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 b-l b-light">
-                <div class="m-l-xs m-t-xs m-b-sm font-bold">Analysis</div>
-                <div class="text-center">
-                  <div class="inline">
-                    <div ui-jq="easyPieChart" ui-options="{
-                          percent: 65,
-                          lineWidth: 50,
-                          trackColor: '#e8eff0',
-                          barColor: '#23b7e5',
-                          scaleColor: false,
-                          size: 100,
-                          rotate: 90,
-                          lineCap: 'butt',
-                          animate: 2000
-                        }">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li class="dropdown">
-          <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-              <i class="fa fa-fw fa-plus visible-xs-inline-block"></i>
-              <span translate="header.navbar.new.NEW">New</span> <span class="caret"></span>
-            </a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#" translate="header.navbar.new.PROJECT">Projects</a></li>
-            <li>
-              <a href>
-                  <span class="badge bg-info pull-right">5</span>
-                  <span translate="header.navbar.new.TASK">Task</span>
-                </a>
-            </li>
-            <li><a href translate="header.navbar.new.USER">User</a></li>
-            <li class="divider"></li>
-            <li>
-              <a href>
-                  <span class="badge bg-danger pull-right">4</span>
-                  <span translate="header.navbar.new.EMAIL">Email</span>
-                </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-      <!-- / link and dropdown -->
-
-      <!-- search form -->
-      <form class="navbar-form navbar-form-sm navbar-left shift" ui-shift="prependTo" data-target=".navbar-collapse" role="search"
-        ng-controller="TypeaheadDemoCtrl">
-        <div class="form-group">
-          <div class="input-group">
-            <input type="text" ng-model="selected" typeahead="state for state in states | filter:$viewValue | limitTo:8" class="form-control input-sm bg-light no-border rounded padder"
-              placeholder="Search projects...">
-            <span class="input-group-btn">
-                <button type="submit" class="btn btn-sm bg-light rounded"><i class="fa fa-search"></i></button>
-              </span>
-          </div>
-        </div>
-      </form>
-      <!-- / search form -->
-
-      <!-- nabar right -->
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-              <i class="icon-bell fa-fw"></i>
-              <span class="visible-xs-inline">Notifications</span>
-              <span class="badge badge-sm up bg-danger pull-right-xs">2</span>
-            </a>
-          <!-- dropdown -->
-          <div class="dropdown-menu w-xl animated fadeInUp">
-            <div class="panel bg-white">
-              <div class="panel-heading b-light bg-light">
-                <strong>You have <span>2</span> notifications</strong>
-              </div>
-              <div class="list-group">
-                <a href class="list-group-item">
-                    <span class="pull-left m-r thumb-sm">
-                      <img src="./public/img/a0.jpg" alt="..." class="img-circle">
-                    </span>
-                    <span class="clear block m-b-none">
-                      Use awesome animate.css<br>
-                      <small class="text-muted">10 minutes ago</small>
-                    </span>
-                  </a>
-                <a href class="list-group-item">
-                    <span class="clear block m-b-none">
-                      1.0 initial released<br>
-                      <small class="text-muted">1 hour ago</small>
-                    </span>
-                  </a>
-              </div>
-              <div class="panel-footer text-sm">
-                <a href class="pull-right"><i class="fa fa-cog"></i></a>
-                <a href="#notes" data-toggle="class:show animated fadeInRight">See all the notifications</a>
-              </div>
-            </div>
-          </div>
-          <!-- / dropdown -->
-        </li>
-        <li class="dropdown">
-          <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
-              <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
-                <img src="./public/img/a0.jpg" alt="...">
-                <i class="on md b-white bottom"></i>
-              </span>
-              <span class="hidden-sm hidden-md">John.Smith</span> <b class="caret"></b>
-            </a>
-          <!-- dropdown -->
-          <ul class="dropdown-menu animated fadeInRight w">
-            <li class="wrapper b-b m-b-sm bg-light m-t-n-xs">
-              <div>
-                <p>300mb of 500mb used</p>
-              </div>
-              <div class="progress progress-xs m-b-none dker">
-                <div class="progress-bar progress-bar-info" data-toggle="tooltip" data-original-title="50%" style="width: 50%"></div>
-              </div>
-            </li>
-            <li>
-              <a href>
-                  <span class="badge bg-danger pull-right">30%</span>
-                  <span>Settings</span>
-                </a>
-            </li>
-            <li>
-              <a ui-sref="app.page.profile">Profile</a>
-            </li>
-            <li>
-              <a ui-sref="app.docs">
-                  <span class="label bg-info pull-right">new</span>
-                  Help
-                </a>
-            </li>
-            <li class="divider"></li>
-            <li>
-              <a ui-sref="access.signin">Logout</a>
-            </li>
-          </ul>
-          <!-- / dropdown -->
-        </li>
-      </ul>
-      <!-- / navbar right -->
     </div>
     <!-- / navbar collapse -->
   </header>
@@ -269,94 +42,12 @@
   <aside id="aside" class="app-aside hidden-xs bg-dark">
     <div class="aside-wrap">
       <div class="navi-wrap">
-        <!-- user -->
-        <div class="clearfix hidden-xs text-center hide" id="aside-user">
-          <div class="dropdown wrapper">
-            <a href="app.page.profile">
-                <span class="thumb-lg w-auto-folded avatar m-t-sm">
-                  <img src="./public/img/a0.jpg" class="img-full" alt="...">
-                </span>
-              </a>
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle hidden-folded">
-                <span class="clear">
-                  <span class="block m-t-sm">
-                    <strong class="font-bold text-lt">John.Smith</strong> 
-                    <b class="caret"></b>
-                  </span>
-                  <span class="text-muted text-xs block">Art Director</span>
-                </span>
-              </a>
-            <!-- dropdown -->
-            <ul class="dropdown-menu animated fadeInRight w hidden-folded">
-              <li class="wrapper b-b m-b-sm bg-info m-t-n-xs">
-                <span class="arrow top hidden-folded arrow-info"></span>
-                <div>
-                  <p>300mb of 500mb used</p>
-                </div>
-                <div class="progress progress-xs m-b-none dker">
-                  <div class="progress-bar bg-white" data-toggle="tooltip" data-original-title="50%" style="width: 50%"></div>
-                </div>
-              </li>
-              <li>
-                <a href>Settings</a>
-              </li>
-              <li>
-                <a href="page_profile.html">Profile</a>
-              </li>
-              <li>
-                <a href>
-                    <span class="badge bg-danger pull-right">3</span>
-                    Notifications
-                  </a>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <a href="page_signin.html">Logout</a>
-              </li>
-            </ul>
-            <!-- / dropdown -->
-          </div>
-          <div class="line dk hidden-folded"></div>
-        </div>
-        <!-- / user -->
-
         <!-- nav -->
         <nav ui-nav class="navi clearfix">
           <ul class="nav">
-            <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
-              <span>Navigation</span>
-            </li>
             <li>
-              <a href class="auto">      
-                  <span class="pull-right text-muted">
-                    <i class="fa fa-fw fa-angle-right text"></i>
-                    <i class="fa fa-fw fa-angle-down text-active"></i>
-                  </span>
-                  <i class="glyphicon glyphicon-stats icon text-primary-dker"></i>
-                  <span class="font-bold">Dashboard</span>
-                </a>
-              <ul class="nav nav-sub dk">
-                <li class="nav-sub-header">
-                  <a href>
-                      <span>Dashboard</span>
-                    </a>
-                </li>
-                <li>
-                  <a href="index.html">
-                      <span>Dashboard v1</span>
-                    </a>
-                </li>
-                <li>
-                  <a href="dashboard.html">
-                      <b class="label bg-info pull-right">N</b>
-                      <span>Dashboard v2</span>
-                    </a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a [routerLink]="news">
-                  <b class="badge bg-info pull-right">9</b>
+              <a [routerLink]="['news']" class="auto">
+                  <!-- <b class="badge bg-info pull-right">9</b> -->
                   <i class="glyphicon glyphicon-envelope icon text-info-lter"></i>
                   <span class="font-bold">发布新闻</span>
                 </a>
@@ -374,7 +65,7 @@
                     <i class="fa fa-fw fa-angle-right text"></i>
                     <i class="fa fa-fw fa-angle-down text-active"></i>
                   </span>
-                  <b class="badge bg-info pull-right">2</b>
+                  <!-- <b class="badge bg-info pull-right">2</b> -->
                   <i class="glyphicon glyphicon-th"></i>
                   <span>首页配置</span>
                 </a>
@@ -402,7 +93,7 @@
                     <i class="fa fa-fw fa-angle-right text"></i>
                     <i class="fa fa-fw fa-angle-down text-active"></i>
                   </span>
-                  <b class="badge bg-info pull-right">2</b>
+                  <!-- <b class="badge bg-info pull-right">2</b> -->
                   <i class="glyphicon glyphicon-briefcase icon"></i>
                   <span>论坛</span>
                 </a>
@@ -419,7 +110,7 @@
                 </li>
                 <li>
                   <a [routerLink]="['forumlist']">
-                      <b class="badge bg-info pull-right">3</b>
+                      <!-- <b class="badge bg-info pull-right">3</b> -->
                       <span>论坛活动列表</span>
                     </a>
                 </li>
@@ -431,14 +122,14 @@
                     <i class="fa fa-fw fa-angle-right text"></i>
                     <i class="fa fa-fw fa-angle-down text-active"></i>
                   </span>
-                  <b class="label bg-primary pull-right">3</b>
+                  <!-- <b class="label bg-primary pull-right">3</b> -->
                   <i class="glyphicon glyphicon-list"></i>
-                  <span>发现</span>
+                  <span>发现配置</span>
                 </a>
               <ul class="nav nav-sub dk">
                 <li class="nav-sub-header">
                   <a href>
-                      <span>发现</span>
+                      <span>发现配置</span>
                     </a>
                 </li>
                 <li>
@@ -459,16 +150,7 @@
                   <span>Chart</span>
                 </a>
               </li>-->
-            <li>
-              <a href class="auto">
-                  <span class="pull-right text-muted">
-                    <i class="fa fa-fw fa-angle-right text"></i>
-                    <i class="fa fa-fw fa-angle-down text-active"></i>
-                  </span>
-                  <i class="glyphicon glyphicon-file icon"></i>
-                  <span>Pages</span>
-                </a>
-            </li>
+
 
             <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
               <span>基础信息配置</span>
@@ -479,7 +161,7 @@
                     <i class="fa fa-fw fa-angle-right text"></i>
                     <i class="fa fa-fw fa-angle-down text-active"></i>
                   </span>
-                  <b class="label bg-primary pull-right">3</b>
+                  <!-- <b class="label bg-primary pull-right">3</b> -->
                   <i class="glyphicon glyphicon-list"></i>
                   <span>分类信息</span>
                 </a>
@@ -511,7 +193,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <!-- <li>
               <a href class="auto">
                   <span class="pull-right text-muted">
                     <i class="fa fa-fw fa-angle-right text"></i>
@@ -543,30 +225,10 @@
                     </a>
                 </li>
               </ul>
-            </li>
+            </li> -->
           </ul>
         </nav>
         <!-- nav -->
-        <!-- aside footer -->
-        <div class="wrapper m-t">
-          <div class="text-center-folded">
-            <span class="pull-right pull-none-folded">60%</span>
-            <span class="hidden-folded">Milestone</span>
-          </div>
-          <div class="progress progress-xxs m-t-sm dk">
-            <div class="progress-bar progress-bar-info" style="width: 60%;">
-            </div>
-          </div>
-          <div class="text-center-folded">
-            <span class="pull-right pull-none-folded">35%</span>
-            <span class="hidden-folded">Release</span>
-          </div>
-          <div class="progress progress-xxs m-t-sm dk">
-            <div class="progress-bar progress-bar-primary" style="width: 35%;">
-            </div>
-          </div>
-        </div>
-        <!-- / aside footer -->
       </div>
     </div>
   </aside>
